# iceye-ai-engineer

./: .gitattributes  .gitignore  README.md  REQUIREMENTS_TRACE.md  pyproject.toml  sample_mask.npy
data/: part1_entities.json
iceye_ai_engineer/: __init__.py  part1_chatbot.py  part1_ingest.py  part2_blob_boxes.py
tests/: test_part1.py  test_part2.py
