[project]
name = "iceye-ai-engineer"
version = "0.1.0"
description = "Implementation constrained by AI Engineer Technical Homework Task.pdf"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "glinker==0.1.1",
    "kreuzberg==4.9.9",
    "numpy==2.5.0",
    "pydantic==2.13.4",
    "pydantic-ai==2.1.0",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"
